# docs/swagger.json
@@ -103,7 +103,7 @@
         },
         "/health": {
             "get": {
-                "description": "Crash the server",
+                "description": "Check for the health of the server",
                 "consumes": [
                     "application/json"
                 ],
@@ -114,6 +114,69 @@
                 "responses": {
                     "200": {
                         "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/protected/profile": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get the user profile information after authenticating with Firebase.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Protected"
+                ],
+                "summary": "Get Profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/protected/secret": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Return secret",
+                "consumes": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Protected"
+                ],
+                "summary": "Get A Secret if Authenticated",
+                "responses": {
+                    "200": {
+                        "description": "secret",
                         "schema": {
                             "type": "string"
                         }
@@ -181,6 +244,13 @@
             }
         }
     },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    },
     "tags": [
         {
             "description": "API for testing that the database is setup correctly",
@@ -193,6 +263,10 @@
         {
             "description": "Health Check for this API",
             "name": "Health Check"
+        },
+        {
+            "description": "Endpoints that require authentication",
+            "name": "Protected"
         }
     ]
 }
